# crewai_enterprise_test

./: README.md  pyproject.toml
src/team_event_planning_tool_assistance_and_suggestions/: crew.py  main.py
src/team_event_planning_tool_assistance_and_suggestions/config/: agents.yaml  tasks.yaml
