[project]
name = "team_event_planning_tool_assistance_and_suggestions"
version = "0.1.0"
description = "team_event_planning_tool_assistance_and_suggestions using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
team_event_planning_tool_assistance_and_suggestions = "team_event_planning_tool_assistance_and_suggestions.main:run"
run_crew = "team_event_planning_tool_assistance_and_suggestions.main:run"
train = "team_event_planning_tool_assistance_and_suggestions.main:train"
replay = "team_event_planning_tool_assistance_and_suggestions.main:replay"
test = "team_event_planning_tool_assistance_and_suggestions.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
